--- a/meet_the_team.html
+++ b/meet_the_team.html
@@ -13,14 +13,8 @@
     <link rel="stylesheet" href="css/style.css">
     <style>
         body {
-            background: url('/images/waterfall.jpg') no-repeat center center fixed white;
+            background: url('/images/park1.jpg') no-repeat center center fixed white;
             background-size: cover;
-        }
-
-        .block2 {
-            text-align: center;
-            color: white;
-            margin: 70px;
         }
     </style>
 </head>
@@ -31,16 +25,19 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active text-white" aria-current="page" href="#">Home</a>
+                        <a class="nav-link active text-white" aria-current="page" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="#">Appointment</a>
+                        <a class="nav-link text-white" href="appointment.html">Appointment</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="#">Team</a>
+                        <a class="nav-link text-white" href="meet_the_team.html">Team</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="#">Tour</a>
+                        <a class="nav-link text-white" href="office_tour.html">Tour</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-white" href="insurance.html">Insurance</a>
                     </li>
 
                     <li class="nav-item dropdown">
@@ -49,17 +46,26 @@
                             Services
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="#">Services1</a></li>
-                            <li><a class="dropdown-item" href="#">Services2</a></li>
+                            <li><a class="dropdown-item" href="#">Invisalign</a></li>
+                            <li><a class="dropdown-item" href="#">Dental Implants</a></li>
+                            <li><a class="dropdown-item" href="#">Cosmetic Dental Services</a></li>
+                            <li><a class="dropdown-item" href="#">Crowns and Fillings</a></li>
+                            <li><a class="dropdown-item" href="#">Emergency Dentist</a></li>
+                            <li><a class="dropdown-item" href="#">Family Dentistry</a></li>
+                            <li><a class="dropdown-item" href="#">Night and Sports Guards</a></li>
+                            <li><a class="dropdown-item" href="#">Porcelain Veneers</a></li>
+                            <li><a class="dropdown-item" href="#">Saturday Dentist</a></li>
+                            <li><a class="dropdown-item" href="#">Teeth Whitening</a></li>
+                            <li><a class="dropdown-item" href="#">Chao Surgical Pinhole Technique</a></li>
                             <li>
                                 <hr class="dropdown-divider">
                             </li>
-                            <li><a class="dropdown-item" href="#">Services3</a></li>
+                            <li><a class="dropdown-item" href="#">Learn More</a></li>
                         </ul>
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="#">Contact</a>
+                        <a class="nav-link text-white" href="contact.html">Contact</a>
                     </li>
                 </ul>
                 <!--test<form class="d-flex">
@@ -69,19 +75,26 @@
             </div>
         </div>
     </nav>
-    <div class="block2">
-        <h1>Meet the Team</h1>
-        <img style="border-radius: 5%;" src="images/goldprovider.png" alt="2020 gold provider dentistry">
-        <h2>Caixia Lan DMD</h2>
-        <img style="float: left; height: 220px;" src="images/caixialan.jpg" alt="caixia lan">
-        <p>Dr. Lan and her team are passionate about helping patients achieve optimal dental health through
+    <div data-aos="fade-down" data-aos-offset="50" data-aos-easing="ease-in-sine" data-aos-anchor-placement="center-up">
+        <p style="text-align:center;font-size:25px; color: whitesmoke; margin: 60px;">
+            <br><br>
+            Meet the Team
+            <br>
+            <img style="border-radius: 5%;" src="images/goldprovider.png" alt="2020 gold provider dentistry">
+            <br>
+            Caixia Lan DMD
+            <br>
+            <img style="float: left; height: 220px;" src="images/caixialan.jpg" alt="caixia lan">
+            <br>
+            Dr. Lan and her team are passionate about helping patients achieve optimal dental health through
             patient
             education and prevention. Dr. Lan’s priority is achieving lasting oral heath which starts by
             listening to you,
             the patient, and what your smile goals are. She is dedicated to each of her patients’ smiles
             with a simple
-            philosophy; treat patients as if they were her own family.</p>
-        <p>Dr. Lan received her first dental degree in Shanghai, China. Upon moving to the United States,
+            philosophy; treat patients as if they were her own family.
+            <br>
+            Dr. Lan received her first dental degree in Shanghai, China. Upon moving to the United States,
             she advanced her
             dental education from the University of Boston where she graduated with honors. After moving to
             the Seattle area
@@ -89,80 +102,116 @@
             and our
             wonderful patients. In her free time, she enjoys hiking the beautiful northwest trails, skiing,
             and discovering
-            new restaurants.</p>
-        <p>Fluent languages to help patient communication: English, Mandarin, and Taiwanese.
-        </p>
-        <h2>Frank Rho DDS
-            <img style="float: right; height: 220px;" src="images/frankrho.jpg" alt="frank rho">
-        </h2>
-        <p>Dr. Rho offers 25 years of experience in general and advanced dentistry. He has dedicated his
-            career to learning
-            the most advanced dental techniques available with an overall focus of customized function and
-            optimum oral
-            health through general dentistry, dental Implants, orthodontics, cosmetic dentistry and full
-            mouth
-            reconstruction. You are the patient. Each person has different dental goals with individual
-            needs. This is where
-            Dr. Rho finds his years of experience and skill level most helpful to his patients. Your dental
-            needs can all be
-            treated in one place with one health-oriented goal you and Dr. Rho have co-collaborated on
-            together, achieving
-            your most optimum dental health and longevity.</p>
-        <p>Graduate of Loma Linda University School of Dentistry in 1997. After graduating, Dr. Rho advanced
-            his skill and
-            training to master Oral and Maxillofacial Surgery and Dental Implant placement. This training
-            level then led to
-            more comprehensive full mouth reconstruction options. Today, Dr. Rho has treated thousands of
-            happy patients in
-            his career, and he brings the entire scope of his experience, care and skill to you, with the
-            best options
-            dentistry has to offer efficiently and comfortably.</p>
-        <p>After several years away and owning his own practices, Dr. Rho has returned to Washington where
-            he grew up to be
-            closer to his family and live in the state, he always called home. In his opinion, there is
-            nowhere more
-            beautiful than the Pacific Northwest.</p>
-        <h2>Malavika Prasanna DDS</h2>
-        <img style="float: left; height: 220px;" src="images/malavika.jpg" alt="malavika prasanna">
-        <p>Dr. Prasanna has a strong passion for restorative dentistry with a focus on communication and
-            collaboration with
-            her patients. This passion has allowed her to help her patients achieve their dental goals while
-            improving their
-            overall dental health. Dr. Prasanna has made it her personal goal to offer her patients the best
-            quality in
-            general dentistry available with a personalized relationship. As Dr. Prasanna says, “Each
-            patient becomes a part
-            of my family”.</p>
-        <p>Dr. Prasanna’s dental studies started with Government Dental College in Bangalore, India where
-            she was the top
-            dental student in Prosthodontics. After moving to the United States, she furthered dental
-            education with NYU
-            College of Dentistry. This experience led to her making Redmond her dental home and allowed her
-            to be part of a
-            great community to share her passion for dentistry and patient relations.</p>
-        <p>In her free time Dr. Prasanna is a loyal Seahawks fan, enjoys the local Seattle art and music
-            scene, and most
-            importantly spending time with her two children and family.</p>
-    </div>
-    <footer style="background-color: black ; opacity: 50%; ">
-        <ul style="text-align: center;">
-            <li>Explore Our Site</li>
-            <li><a href="insurance.html">Insurance</a></li>
-            <li><a href="contact.html">Contact</a></li>
-            <li><a href="appointment.html">Appointment</a></li>
-            <li>Monday 8:00 am - 5:00 pm</li>
-            <li>Tuesday 8:00 am - 5:00 pm</li>
-            <li>Wednesday 8:00 am - 5:00 pm</li>
-            <li>Thursday 8:00 am - 5:00 pm</li>
-            <li>Friday 8:00 am - 5:00 pm</li>
-            <li>Saturday Call for Availability</li>
-            <li>Sunday Closed</li>
-            <li>Redmond Way Dentistry,
-                15946 Redmond Way #106,
-                Redmond, WA, 98052,
-                Phone: (425) 898-2168</li>
-        </ul>
-    </footer>
+            new restaurants.
+            <br>
+            Fluent languages to help patient communication: English, Mandarin, and Taiwanese.
+        <div data-aos="fade-up" data-aos-offset="100" data-aos-easing="ease-in-sine"
+            data-aos-anchor-placement="center-up">
+            <p style="text-align:center;font-size:25px; color: whitesmoke; margin: 60px;">
+                <br><br>
+                Frank Rho DDS
+                <br>
+                <img style="float: right; height: 220px;" src="images/frankrho.jpg" alt="frank rho">
+                <br>
+                Dr. Rho offers 25 years of experience in general and advanced dentistry. He has dedicated his
+                career to learning
+                the most advanced dental techniques available with an overall focus of customized function and
+                optimum oral
+                health through general dentistry, dental Implants, orthodontics, cosmetic dentistry and full
+                mouth
+                reconstruction. You are the patient. Each person has different dental goals with individual
+                needs. This is where
+                Dr. Rho finds his years of experience and skill level most helpful to his patients. Your dental
+                needs can all be
+                treated in one place with one health-oriented goal you and Dr. Rho have co-collaborated on
+                together, achieving
+                your most optimum dental health and longevity.
+                <br>
+                Graduate of Loma Linda University School of Dentistry in 1997. After graduating, Dr. Rho advanced
+                his skill and
+                training to master Oral and Maxillofacial Surgery and Dental Implant placement. This training
+                level then led to
+                more comprehensive full mouth reconstruction options. Today, Dr. Rho has treated thousands of
+                happy patients in
+                his career, and he brings the entire scope of his experience, care and skill to you, with the
+                best options
+                dentistry has to offer efficiently and comfortably.
+                <br>
+                After several years away and owning his own practices, Dr. Rho has returned to Washington where
+                he grew up to be
+                closer to his family and live in the state, he always called home. In his opinion, there is
+                nowhere more
+                beautiful than the Pacific Northwest.
+            <div data-aos="fade-up" data-aos-offset="150" data-aos-easing="ease-in-sine"
+                data-aos-anchor-placement="center-up">
+                <p style="text-align:center;font-size:25px; color: whitesmoke; margin: 60px;">
+                    <br><br>
+                    Malavika Prasanna DDS
+                    <br>
+                    <img style="float: left; height: 220px;" src="images/malavika.jpg" alt="malavika prasanna">
+                    <br>
+                    Dr. Prasanna has a strong passion for restorative dentistry with a focus on communication and
+                    collaboration with
+                    her patients. This passion has allowed her to help her patients achieve their dental goals while
+                    improving their
+                    overall dental health. Dr. Prasanna has made it her personal goal to offer her patients the best
+                    quality in
+                    general dentistry available with a personalized relationship. As Dr. Prasanna says, “Each
+                    patient becomes a part
+                    of my family”.
+                    <br>
+                    Dr. Prasanna’s dental studies started with Government Dental College in Bangalore, India where
+                    she was the top
+                    dental student in Prosthodontics. After moving to the United States, she furthered dental
+                    education with NYU
+                    College of Dentistry. This experience led to her making Redmond her dental home and allowed her
+                    to be part of a
+                    great community to share her passion for dentistry and patient relations.
+                    <br>
+                    In her free time Dr. Prasanna is a loyal Seahawks fan, enjoys the local Seattle art and music
+                    scene, and most
+                    importantly spending time with her two children and family.
+                    <br>
+                </p>
+            </div>
+
+            <footer class="bg-dark text-center text-white">
+
+                <div class="container p-4">
+
+                    <section class="mb-4">
+                        <!--The point of these icons are for the user to hover over. Mostly for visual effect. Decided not to use social media icons here and put them at the top instead. -->
+
+                        <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><i
+                                class="fab fa-twitter"></i></a>
+
+
+                        <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><i
+                                class="fab fa-google"></i></a>
+
+
+                        <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><i
+                                class="fab fa-instagram"></i></a>
+
+                        <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><i
+                                class="fab fa-linkedin-in"></i></a>
+
+
+                        <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><i
+                                class="fab fa-github"></i></a>
+                    </section>
+                </div>
+
+                <!-- Copyright -->
+                <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+                    © 2023 Copyright:
+                    <a class="text-white" href="index.html">Redmond Web Renovators</a>
+                </div>
+            </footer>
+            <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+            <script>
+                AOS.init();
+            </script>
 </body>
 
 </html>
