--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
                     <li class="nav-item">
                         <a class="nav-link text-white" href="office_tour.html">Tour</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-white" href="insurance.html">Insurance</a>
+                    </li>
 
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropdown" role="button"
