insurance and meet the team w/o appoint. page nav

--- a/insurance.html
+++ b/insurance.html
@@ -30,9 +30,6 @@
                         <a class="nav-link active text-white" aria-current="page" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="appointment.html">Appointment</a>
-                    </li>
-                    <li class="nav-item">
                         <a class="nav-link text-white" href="meet_the_team.html">Team</a>
                     </li>
                     <li class="nav-item">
@@ -77,8 +74,8 @@
             </div>
         </div>
     </nav>
-    <div data-aos="fade-down" data-aos-offset="50" data-aos-easing="ease-in-sine" data-aos-anchor-placement="center-up">
-        <p style="text-align:center;font-size:40px; margin: 70px;">
+    <div data-aos="fade-up" data-aos-offset="25" data-aos-easing="ease-in-sine" data-aos-anchor-placement="center-up">
+        <p style="text-align:center;font-size:40px;">
             <br><br>
             Dental Insurance
             <br>
