--- a/contact.html
+++ b/contact.html
@@ -201,16 +201,19 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active text-white" aria-current="page" href="#">Home</a>
+                        <a class="nav-link active text-white" aria-current="page" href="index.html">Home</a>
+                    </li>
+
+                    <li class="nav-item">
+                        <a class="nav-link text-white" href="meet_the_team.html">Team</a>
+                    </li>
+
+
+                    <li class="nav-item">
+                        <a class="nav-link text-white" href="office_tour.html">Tour</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="#">Appointment</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-white" href="#">Team</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-white" href="#">Tour</a>
+                        <a class="nav-link text-white" href="insurance.html">Insurance</a>
                     </li>
 
                     <li class="nav-item dropdown">
@@ -218,20 +221,32 @@
                             Services
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="#">Services1</a></li>
-                            <li><a class="dropdown-item" href="#">Services2</a></li>
+                            <li><a class="dropdown-item" href="#">Invisalign</a></li>
+                            <li><a class="dropdown-item" href="#">Dental Implants</a></li>
+                            <li><a class="dropdown-item" href="#">Cosmetic Dental Services</a></li>
+                            <li><a class="dropdown-item" href="#">Crowns and Fillings</a></li>
+                            <li><a class="dropdown-item" href="#">Emergency Dentist</a></li>
+                            <li><a class="dropdown-item" href="#">Family Dentistry</a></li>
+                            <li><a class="dropdown-item" href="#">Night and Sports Guards</a></li>
+                            <li><a class="dropdown-item" href="#">Porcelain Veneers</a></li>
+                            <li><a class="dropdown-item" href="#">Saturday Dentist</a></li>
+                            <li><a class="dropdown-item" href="#">Teeth Whitening</a></li>
+                            <li><a class="dropdown-item" href="#">Chao Surgical Pinhole Technique</a></li>
                             <li>
                                 <hr class="dropdown-divider">
                             </li>
-                            <li><a class="dropdown-item" href="#">Services3</a></li>
+                            <li><a class="dropdown-item" href="#">Learn More</a></li>
                         </ul>
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="#">Contact</a>
+                        <a class="nav-link text-white" href="contact.html">Contact</a>
                     </li>
                 </ul>
-
+                <!--test<form class="d-flex">
+                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                    <button class="btn btn-outline-light" type="submit">Search</button>
+                </form>-->
             </div>
         </div>
     </nav>
