--- a/insurance.html
+++ b/insurance.html
@@ -16,7 +16,7 @@
         body {
             background: url('../images/eastsidepark.jpg') no-repeat center center fixed;
             background-size: cover;
-            /*background-color: rgb(26, 26, 28);*/
+            font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 
         }
     </style>
