insurance and team with full footers

--- a/meet_the_team.html
+++ b/meet_the_team.html
@@ -202,6 +202,27 @@
                         class="fab fa-github"></i></a>
             </section>
         </div>
+        <section class="mb-4">
+            <p>
+
+                Monday
+                8:00 am - 5:00 pm <br>
+                Tuesday
+                8:00 am - 5:00 pm <br>
+                Wednesday
+                8:00 am - 5:00 pm <br>
+                Thursday
+                8:00 am - 5:00 pm <br>
+                Friday
+                8:00 am - 5:00 pm
+                <hr>
+                Saturday
+                Call for Availability <br>
+                Sunday
+                Closed
+
+            </p>
+        </section>
 
         <!-- Copyright -->
         <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
