--- a/office_tour.html
+++ b/office_tour.html
@@ -20,6 +20,15 @@
             color: white;
             text-align: center
         }
+        
+        a {
+            text-align: center;
+            font-family: "ofelia-text", sans-serif;
+            font-weight: 400;
+            font-style: normal;
+            font-size: 14px;
+            color: rgb(63, 63, 120)
+        }
         /* In the following, I used the information from MDBootstrap for the animations */
         
         h1 {
