--- a/meet_the_team.html
+++ b/meet_the_team.html
@@ -16,7 +16,14 @@
         body {
             background: url('/images/park1.jpg') no-repeat center center fixed white;
             background-size: cover;
-            font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+            font-family: "ofelia-text", sans-serif;
+            font-weight: 600;
+        }
+
+        h1,
+        p {
+            font-family: "ofelia-text", sans-serif;
+            font-weight: 600;
         }
     </style>
 </head>
