--- a/insurance.html
+++ b/insurance.html
@@ -16,8 +16,15 @@
         body {
             background: url('../images/eastsidepark.jpg') no-repeat center center fixed;
             background-size: cover;
-            font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+            font-family: "ofelia-text", sans-serif;
+            font-weight: 600;
 
+        }
+
+        h1,
+        p {
+            font-family: "ofelia-text", sans-serif;
+            font-weight: 600;
         }
     </style>
 </head>
