added a tag style

--- a/insurance.html
+++ b/insurance.html
@@ -26,6 +26,15 @@
             font-family: "ofelia-text", sans-serif;
             font-weight: 400;
         }
+
+        a {
+            text-align: center;
+            font-family: "ofelia-text", sans-serif;
+            font-weight: 400;
+            font-style: normal;
+            font-size: 14px;
+            color: (63, 63, 120);
+        }
     </style>
 </head>
 
