--- a/meet_the_team.html
+++ b/meet_the_team.html
@@ -25,6 +25,15 @@
             font-family: "ofelia-text", sans-serif;
             font-weight: 400;
         }
+
+        a {
+            text-align: center;
+            font-family: "ofelia-text", sans-serif;
+            font-weight: 400;
+            font-style: normal;
+            font-size: 14px;
+            color: (63, 63, 120);
+        }
     </style>
 </head>
 
