--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <style>
         body {
             /*background: url('../images/homepageimage.jpg') no-repeat center center fixed white;*/
-            background: url('/images/homeimagetest.jpg') no-repeat center center fixed;
+            background: url('images/homeimagetest.jpg') no-repeat center center fixed;
             background-size: cover;
             /*background-color: rgb(26, 26, 28);*/
 
