--- a/office_tour.html
+++ b/office_tour.html
@@ -187,7 +187,8 @@
             <div class="container2">
 
 
-                <h6>To book an appointment call us, email us or feel free to stop on in. If we’re not busy we’ll get you right in. We are conveniently located in the Trader Joe’s shopping center in Redmond.</h6>
+                <h6>To book an appointment call us, email us or feel free to stop on in. If we’re not busy we’ll get you right in. </h6>
+                <h6>We are conveniently located in the Trader Joe’s shopping center in Redmond.</h6>
                 <br>
 
             </div>
