--- a/insurance.html
+++ b/insurance.html
@@ -18,13 +18,21 @@
             background-size: cover;
             font-family: "ofelia-text", sans-serif;
             font-weight: 400;
-
         }
-
+        
         h1,
         p {
             font-family: "ofelia-text", sans-serif;
             font-weight: 400;
+        }
+        
+        a {
+            text-align: center;
+            font-family: "ofelia-text", sans-serif;
+            font-weight: 400;
+            font-style: normal;
+            font-size: 14px;
+            color: rgb(63, 63, 120)
         }
     </style>
 </head>
@@ -48,8 +56,7 @@
                     </li>
 
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropdown" role="button"
-                            data-bs-toggle="dropdown" aria-expanded="false">
+                        <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             Services
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -84,57 +91,30 @@
     </nav>
     <div data-aos="fade-up" data-aos-offset="25" data-aos-easing="ease-in-sine" data-aos-anchor-placement="center-up">
         <p style="text-align:center;font-size:40px;">
-            <br><br>
-            Dental Insurance
-            <br>
-            Delta Dental (PPO and Premier)
-            <br>
-            AARp
-            <br>
-            Aetna
-            <br>
-            Ameritas
-            <br>
-            Assurant
-            <br>
-            Cigna
-            <br>
-            Dentemax
-            <br>
-            DHA
-            <br>
-            Guardian
-            <br>
-            Humana
-            <br>
-            Kaiser Permanente
-            <br>
-            Lifemap
-            <br>
-            Lifewise
-            <br>
-            Metlife
-            <br>
-            Premera
-            <br>
-            Principal
-            <br>
-            Regence
-            <br>
-            Standard
-            <br>
-            Sunlife
-            <br>
-            United Concordia
-            <br>
-            United Healthcare
-            <br>
-            And many more...
-            <br>
-            If your insurance is not listed, please <a href="contact.html">Contact Our Office</a>, and we will check
-            your
-            benefits before your
-            appointment.
+            <br><br> Dental Insurance
+            <br> Delta Dental (PPO and Premier)
+            <br> AARp
+            <br> Aetna
+            <br> Ameritas
+            <br> Assurant
+            <br> Cigna
+            <br> Dentemax
+            <br> DHA
+            <br> Guardian
+            <br> Humana
+            <br> Kaiser Permanente
+            <br> Lifemap
+            <br> Lifewise
+            <br> Metlife
+            <br> Premera
+            <br> Principal
+            <br> Regence
+            <br> Standard
+            <br> Sunlife
+            <br> United Concordia
+            <br> United Healthcare
+            <br> And many more...
+            <br> If your insurance is not listed, please <a href="contact.html">Contact Our Office</a>, and we will check your benefits before your appointment.
             <br>
 
 
@@ -172,21 +152,8 @@
         <section class="mb-4">
             <p>
 
-                Monday
-                8:00 am - 5:00 pm <br>
-                Tuesday
-                8:00 am - 5:00 pm <br>
-                Wednesday
-                8:00 am - 5:00 pm <br>
-                Thursday
-                8:00 am - 5:00 pm <br>
-                Friday
-                8:00 am - 5:00 pm
-                <hr>
-                Saturday
-                Call for Availability <br>
-                Sunday
-                Closed
+                Monday 8:00 am - 5:00 pm <br> Tuesday 8:00 am - 5:00 pm <br> Wednesday 8:00 am - 5:00 pm <br> Thursday 8:00 am - 5:00 pm <br> Friday 8:00 am - 5:00 pm
+                <hr> Saturday Call for Availability <br> Sunday Closed
 
             </p>
         </section>
