--- a/insurance.html
+++ b/insurance.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="https://use.typekit.net/vbf8nix.css">
     <style>
         body {
-            background: url('../images/eastsidepark.jpg') no-repeat center center fixed;
+            background: url('images/eastsidepark.jpg') no-repeat center center fixed;
             background-size: cover;
             font-family: "ofelia-text", sans-serif;
             font-weight: 400;
